front end changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://testnets.opensea.io/collection/gwei-goths"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -69,9 +69,9 @@
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
+        <h1 id="welcomeH1">Welcome to the Gwei Goths NFT Project!</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          The Gwei Goths are a decentralised NFT Investment project where each Goth represents a share of profits! 50% of the initial Mint fees will go to an investment fund which will be used to invest and compound for 1 year. </b> At the end of one year, the whole investment fund including Profits will be liquidated and distributed Pro-rata to all Gwei Goths holders!<a href="https://discord.gg/DHjgKEv5"  target="_blank" rel="noopener noreferrer">Gwei_Goths</a> Discord.
         </p>
       </div>
     </section>
@@ -161,7 +161,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/teststackr-collection"
+          href="https://testnets.opensea.io/collection/gwei-goths"
           target="_blank"
           rel="noopener noreferrer"
         >
