--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,11 +104,11 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+          A new group of Goths will be available very soon!
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/A9CnsVzzkZ"
+          href="https://discord.gg/DHjgKEv5"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
