--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,11 +39,25 @@
         </div>
         <div class="menu">
           <a
+          href="https://nftapparel.com.au"
+          target="_blank"
+          rel="nooperner noreferrer"
+          >
+          <img src="images/header/NFTAlogo.png">
+        </a>
+          <a
             href="https://discord.gg/DHjgKEv5"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/discord.webp" alt="Discord" />
+          </a>
+          <a
+            href="https://t.me/gweigoths"
+            target="_blank"
+            rel="noopener noreferrer"
+            >
+            <img src="">
           </a>
           <a
             href="https://twitter.com/Gwei_Goths"
