--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,7 @@
             target="_blank"
             rel="noopener noreferrer"
             >
-            <img src="">
+            <img src="images/header/telegram.png">
           </a>
           <a
             href="https://twitter.com/Gwei_Goths"
