Opensea link removed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://testnets.opensea.io/collection/gwei-goths"
+            href=""
             target="_blank"
             rel="noopener noreferrer"
           >
