add Opensea Link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href=""
+            href="https://opensea.io/collection/gwei-goths"
             target="_blank"
             rel="noopener noreferrer"
           >
