discord link update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/DHjgKEv5"
+            href="https://discord.gg/az3wU9H7Ut"
             target="_blank"
             rel="noopener noreferrer"
           >
