--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
           target="_blank"
           rel="nooperner noreferrer"
           >
-          <img src="images/header/NFTAlogo.png">
+          <img style="height:4rem" class="logo-img" src="images/header/NFTAlogo.png">
         </a>
         </div>
         <div class="menu">
@@ -71,10 +71,11 @@
           >
             <img src="images/header/opensea.webp" alt="Opensea" />
           </a>
-          <button class="wallet-btn btn" id="connectWallet">
-            <span>Connect Wallet</span>
-          </button>
+          
         </div>
+        <button style="height:4rem; padding:5px; " class="wallet-btn btn" id="connectWallet">
+          <span>Connect Wallet</span>
+        </button>
       </div>
     </header>
 
