--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,7 @@
       </div>
     </section>
 
-    <!-- <section class="container">
+    <section class="container">
       <div class="countdown card">
         <div id="countdown">
           <ul class="count-down" data-date="">
@@ -181,7 +181,7 @@
           <button class="hero-btn btn">View Collection</button>
         </a>
       </div>
-    </section> -->
+    </section>
 
     <div id="spinner" class="dot-spin"></div>
 
